# Multi-Agent-Ensemble-for-Search-Through-Reinforcement-Optimization-MAESTRO-

./: .env.txt  .gitignore  README.md  TRAJECTORY_COLLECTION.md  mdp_dataset.h5  pyproject.toml  requirements.txt
notebooks/: 01_bm25_retriever_endpoint.ipynb  01_data_loading.ipynb  02_simulation_loop.ipynb  03_trajectories.ipynb  05_load_msmarco.ipynb  06_unified_agent_comparison.ipynb  07_test_reformulate_ctx_free_exp_terms.ipynb  08_test_reformulate_with_feedback.ipynb  agents.ipynb  msmarco_dev_queries_qrels.csv  msmarco_queries_3plus_qrels.csv  msmarco_queries_4plus_qrels.csv  msmarco_queries_qrels.csv  msmarco_queries_qrels_1.csv  msmarco_queries_qrels_20_3000.csv  msmarco_queries_qrels_2_3000.csv  msmarco_queries_qrels_50_100.csv  msmarco_queries_qrels_ndcg_0_top_30_doc.csv  msmarco_queries_qrels_ndcg_0_top_60_doc.csv  queries.dev1.v2.tsv  queries.dev2.v2.tsv  queries.train.v2.tsv  queries.trecdl21.v2.tsv  queries.trecdl22.v2.tsv  query_analysis_Reranking_Reformulate.csv
notebooks/qrels/: combined_dev_qrels.tsv  dl21_qrels.tsv  dl23_qrels.tsv  qrels.tsv  (+2 more)
src/: Reformulate.py  __init__.py  agents.py  click_reweight.py  collect_qrels.py  main.py  orcas_loader.py  rerank.py  retriever.py  simulation.py
trajectories/: stats_3_random.json  trajectories_3_random.npz  trajectories_expert_10.csv  trajectories_expert_100.csv  trajectories_expert_2.csv  trajectories_expert_20.csv  trajectories_expert_5.csv  trajectories_prf_10.csv  trajectories_random_1.csv  trajectories_random_10.csv  trajectories_random_100.csv  trajectories_random_20.csv  trajectories_random_5.csv
(+23 files in other folders)
