[tool.poetry]
name = "multi-agent-ensemble-for-search-through-reinforcement-optimization-maestro"
version = "0.1.0"
description = ""
authors = ["Hana Zouari <zouari01@ads.uni-passau.de>"]
readme = "README.md"
packages = [
    { include = "src" }
]

[tool.poetry.scripts]
maestro = "src.main:main"

[tool.poetry.dependencies]
python = ">=3.11,<3.14"
numpy = "^2.0"
sentence-transformers = {version = "^5.2.3", python = ">=3.10,<3.14"}
openai = "^2.24.0"
requests = "^2.32.0"
scipy = "^1.13.0"
python-dotenv = "^1.2.2"
tabulate = "^0.10.0"
ir-datasets = "^0.5.11"
matplotlib = "^3.10.9"
pandas = "^3.0.3"
dotenv = "^0.9.9"
d3rlpy = "^2.8.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "ipykernel (>=7.2.0,<8.0.0)"
]
